--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         #container {                 /* Container for dropdown and controls */
             display: flex;           /* Use flexbox for horizontal layout */
             align-items: center;     /* Vertically align items */
-            justify-content: left; /*Centers the content horizontally*/
+            justify-content: left;   /* Centers the content horizontally*/
             margin-bottom: 10px;     /* Add some space below */
         }
         #sequence {
@@ -18,6 +18,10 @@
             margin-left: 50px; 
             display: flex;  /* Use flexbox for horizontal layout of buttons */
             gap: 5px;       /* Add some space between buttons */
+        }
+        .reset {
+            margin-left: 50px; 
+            display: flex; 
         }
     </style>
 </head>
@@ -33,8 +37,10 @@
         <div class="controls">
             <button onclick="prevFrame()">Previous</button>
             <button onclick="togglePlay()">Play/Pause</button>
-            <button onclick="toggleReset()">Reset</button>
             <button onclick="nextFrame()">Next</button>
+        </div>
+        <div class="reset">
+            <button onclick="toggleReset()">Reset</button>
         </div>
     </div>
     <img id="sequence" src="results/rid-N20_obstacles-0.0_maxsteps-100/frame-0.png">
